# libdict

./: COPYING  Makefile  Makefile.am  Makefile.in  README  README.md  autogen.sh  config.h  config.h.in~  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.1  requests  traces.0  traces.2  traces.3  traces.4
src/: Makefile  Makefile.am  Makefile.in  dict.c  zmalloc.c
src/.deps/: libdict_la-dict.Plo  libdict_la-zmalloc.Plo
